--- a/pallets/chainbridge/Cargo.toml
+++ b/pallets/chainbridge/Cargo.toml
@@ -19,11 +19,11 @@ sp-core = { workspace = true, default-features = false}
 sp-std = { workspace = true, default-features = false }
 sp-runtime = { workspace = true, default-features = false }
 blake2-rfc = { workspace = true, default-features = false }
+frame-benchmarking = { workspace = true, default-features = false, optional = true }
 
 [dev-dependencies]
 pallet-balances = { workspace = true, features = ["std"] }
 sp-io = { workspace = true }
-frame-benchmarking = { workspace = true }
 
 [features]
 default = ["std"]
