--- a/pallets/rewards/Cargo.toml
+++ b/pallets/rewards/Cargo.toml
@@ -26,11 +26,8 @@ test-utils = { workspace = true, default-features = false, optional = true }
 [dev-dependencies]
 pallet-assets = { workspace = true, features = ["std"] }
 pallet-balances = { workspace = true, features = ["std"] }
-sp-application-crypto = { workspace = true }
-sp-keystore = { workspace = true }
-anyhow = { workspace = true }
+sp-core = { default-features = false, workspace = true }
 sp-io = { workspace = true }
-frame-benchmarking = { workspace = true }
 
 [features]
 default = ["std"]
