--- a/primitives/bls-primitives/Cargo.toml
+++ b/primitives/bls-primitives/Cargo.toml
@@ -12,14 +12,17 @@ sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", br
 sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
 sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
 sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
+serde_json = {version = "1.0.94", optional = true}
 blst = {version = "0.3.10", default-features = false, optional=true}
 parity-scale-codec = { workspace = true, default-features = false, features = ["max-encoded-len"] }
 scale-info = { workspace = true, default-features = false, features = ["derive"] }
-
+hex = {version="0.4.3", optional= true}
 
 [features]
 default = ["std"]
 std = [
+    "hex",
+    "serde_json",
     "parity-scale-codec/std",
     "scale-info/std",
     "sp-runtime-interface/std",
