--- a/clients/orderbook/Cargo.toml
+++ b/clients/orderbook/Cargo.toml
@@ -22,6 +22,7 @@ trie-root = { git = "https://github.com/Polkadex-Substrate/trie.git", branch ="m
 reference-trie ={ git = "https://github.com/Polkadex-Substrate/trie.git", branch ="master"  }
 
 orderbook-primitives = { path = "../../primitives/orderbook" }
+bls-primitives = { path = "../../primitives/bls-primitives" }
 polkadex-primitives = { tag = "polkadot-v0.9.28v0.1.11", git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git"}
 rust_decimal = { git = "https://github.com/Polkadex-Substrate/rust-decimal.git", branch = "master", features = ["scale-codec"] }
 prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
