--- a/pallets/ocex/Cargo.toml
+++ b/pallets/ocex/Cargo.toml
@@ -28,6 +28,7 @@ test-utils = { workspace = true, default-features = false, optional = true }
 pallet-timestamp = { workspace = true, default-features = false }
 liquidity = { path = "../liquidity", default-features = false }
 orderbook-primitives = {path="../../primitives/orderbook", default-features = false}
+bls-primitives = {path="../../primitives/bls-primitives", default-features = false}
 sp-application-crypto = { workspace = true }
 
 [dev-dependencies]
@@ -45,6 +46,7 @@ default = ["std"]
 std = [
     "sp-application-crypto/std",
     "orderbook-primitives/std",
+    "bls-primitives/std",
     "parity-scale-codec/std",
     "log/std",
     "scale-info/std",
