--- a/clients/orderbook/Cargo.toml
+++ b/clients/orderbook/Cargo.toml
@@ -20,7 +20,7 @@ memory-db = { git = "https://github.com/Polkadex-Substrate/trie.git", branch ="m
 trie-db = { git = "https://github.com/Polkadex-Substrate/trie.git", branch ="master"  }
 trie-root = { git = "https://github.com/Polkadex-Substrate/trie.git", branch ="master"  }
 reference-trie ={ git = "https://github.com/Polkadex-Substrate/trie.git", branch ="master"  }
-
+reqwest = "0.11.14"
 orderbook-primitives = { path = "../../primitives/orderbook" }
 bls-primitives = { path = "../../primitives/bls-primitives" }
 polkadex-primitives = { path = "../../primitives/polkadex" }
