--- a/clients/orderbook/Cargo.toml
+++ b/clients/orderbook/Cargo.toml
@@ -21,6 +21,7 @@ trie-db = { git = "https://github.com/Polkadex-Substrate/trie.git", branch ="mas
 trie-root = { git = "https://github.com/Polkadex-Substrate/trie.git", branch ="master"  }
 reference-trie ={ git = "https://github.com/Polkadex-Substrate/trie.git", branch ="master"  }
 reqwest = "0.11.14"
+tokio = "1.26.0"
 orderbook-primitives = { path = "../../primitives/orderbook" }
 bls-primitives = { path = "../../primitives/bls-primitives" }
 polkadex-primitives = { path = "../../primitives/polkadex" }
