--- a/primitives/orderbook/Cargo.toml
+++ b/primitives/orderbook/Cargo.toml
@@ -15,6 +15,7 @@ sp-core = { workspace = true }
 sp-runtime = { workspace = true }
 sp-std = { workspace = true}
 polkadex-primitives = { workspace = true }
+chrono = {version = "0.4.23", optional = true}
 serde = { version = "1.0.152", optional = true, default-features = false}
 anyhow = { version = "1.0.69", default-features = false }
 rust_decimal = { git = "https://github.com/Polkadex-Substrate/rust-decimal.git", branch = "master", features = ["scale-codec"], default-features = false }
@@ -25,6 +26,7 @@ serde_json = "1.0.94"
 [features]
 default = ["std"]
 std = [
+    "chrono",
     "bls-primitives/std",
     "serde",
     "anyhow/std",
