--- a/primitives/orderbook/Cargo.toml
+++ b/primitives/orderbook/Cargo.toml
@@ -16,6 +16,7 @@ sp-runtime = { workspace = true }
 sp-std = { workspace = true}
 polkadex-primitives = { workspace = true }
 chrono = {version = "0.4.23", optional = true}
+rand = {version = "0.8.5", optional = true}
 serde = { version = "1.0.152", optional = true, default-features = false}
 anyhow = { version = "1.0.69", default-features = false }
 rust_decimal = { git = "https://github.com/Polkadex-Substrate/rust-decimal.git", branch = "master", features = ["scale-codec"], default-features = false }
@@ -27,6 +28,7 @@ serde_json = "1.0.94"
 default = ["std"]
 std = [
     "chrono",
+    "rand",
     "bls-primitives/std",
     "serde",
     "anyhow/std",
