changed crate name

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ members = [
     "pallets/thea-staking",
     "pallets/liquidity",
     "pallets/thea-cross-chain-governance",
-    "polkadex-extrinsic",
+    "wallet-connector",
 ]
 
 [patch."https://github.com/open-web3-stack/open-runtime-module-library.git"]
