--- a/wallet-connector/Cargo.toml
+++ b/wallet-connector/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = { workspace = true, default-features = false }
 serde = { version = "1.0.136", features = ["derive"], optional = true }
 parity-util-mem = { version = "0.11.0", default-features = false, features = ["primitive-types"] }
 ethers-derive-eip712 = { version="0.13.0", optional=true}
@@ -27,6 +28,7 @@ sp-io = { workspace = true, default-features = false }
 [features]
 default = ["std"]
 std = [
+    "log/std",
     "ethers-derive-eip712",
     "ethers-core",
     "ethers",
