--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ members = [
     "pallets/thea-staking",
     "pallets/liquidity",
     "pallets/thea-cross-chain-governance",
+    "misc/load-testing"
 ]
 
 [patch."https://github.com/open-web3-stack/open-runtime-module-library.git"]
