--- a/clients/orderbook/Cargo.toml
+++ b/clients/orderbook/Cargo.toml
@@ -11,6 +11,7 @@ hex = "0.4.2"
 log = "0.4"
 futures = "0.3"
 thiserror = "1.0.39"
+chrono = "0.4.24"
 parking_lot = "0.12.1"
 serde = "1.0.152"
 serde_json = "1.0.94"
