--- a/primitives/orderbook/Cargo.toml
+++ b/primitives/orderbook/Cargo.toml
@@ -21,12 +21,15 @@ serde = { version = "1.0.152", optional = true, default-features = false}
 anyhow = { version = "1.0.69", default-features = false }
 rust_decimal = { git = "https://github.com/Polkadex-Substrate/rust-decimal.git", branch = "master", features = ["scale-codec"], default-features = false }
 bls-primitives = {path="../bls-primitives", default-features = false}
+libp2p-core = {version ="0.34.0", optional = true}
+
 [dev-dependencies]
 serde_json = "1.0.94"
 
 [features]
 default = ["std"]
 std = [
+    "libp2p-core",
     "chrono",
     "rand",
     "bls-primitives/std",
