--- a/clients/orderbook/Cargo.toml
+++ b/clients/orderbook/Cargo.toml
@@ -14,6 +14,7 @@ thiserror = "1.0.39"
 chrono = "0.4.24"
 parking_lot = "0.12.1"
 serde = "1.0.152"
+primitive-types = {version = "0.12.1", default-features =false, features = ["scale-info"]}
 serde_json = "1.0.94"
 # Database stuff
 hash-db = { git = "https://github.com/Polkadex-Substrate/trie.git", branch ="master" }
