--- a/primitives/orderbook/Cargo.toml
+++ b/primitives/orderbook/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+primitive-types = {version = "0.12.1", default-features =false, features = ["scale-info"]}
 parity-scale-codec = { workspace = true }
 scale-info = { workspace = true }
 sp-api = { workspace = true }
@@ -29,6 +30,7 @@ serde_json = "1.0.94"
 [features]
 default = ["std"]
 std = [
+    "primitive-types/std",
     "libp2p-core",
     "chrono",
     "rand",
