--- a/primitives/bls-primitives/Cargo.toml
+++ b/primitives/bls-primitives/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = {version="0.4.17", optional=true}
 substrate-bip39 = { version = "0.4.4", optional = true }
 tiny-bip39 = { version = "0.8.2", optional = true }
 sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
@@ -21,6 +22,7 @@ hex = {version="0.4.3", optional= true}
 [features]
 default = ["std"]
 std = [
+    "log",
     "hex",
     "serde_json",
     "parity-scale-codec/std",
