--- a/pallets/assets-transaction-payment/Cargo.toml
+++ b/pallets/assets-transaction-payment/Cargo.toml
@@ -15,6 +15,7 @@ scale-info = { workspace = true, default-features = false, features = ["derive"]
 
 frame-support = { workspace = true, default-features = false }
 frame-system = { workspace = true, default-features = false }
+frame-benchmarking = { workspace = true, default-features = false, optional = true }
 pallet-balances = { workspace = true, default-features = false }
 pallet-assets = { workspace = true, default-features = false }
 pallet-transaction-payment = { workspace = true, default-features = false }
@@ -47,3 +48,10 @@ std = [
 	"pallet-timestamp/std",
 	"wallet-connector/std",
 ]
+runtime-benchmarks = [
+    "sp-runtime/runtime-benchmarks",
+    "frame-benchmarking/runtime-benchmarks",
+    "frame-support/runtime-benchmarks",
+    "frame-system/runtime-benchmarks",
+]
+
