--- a/clients/orderbook/Cargo.toml
+++ b/clients/orderbook/Cargo.toml
@@ -52,3 +52,8 @@ sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-
 sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 sp-tracing ={ git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
+
+[dev-dependencies]
+mockall = "0.11.1"
+testing_logger = "0.1.1"
+mockall_double = "0.3.0"
