--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           cat /etc/issue 
           apt update
-          apt install -y clang lldb lld gcc
+          apt install -y clang lldb lld gcc zip
       - name: Install latest nightly with wasm target
         uses: actions-rs/toolchain@v1
         with:
