Revert "Revert after test"
This reverts commit 7cf2fcdfe9d902f5e782e888a653f22c5ab05887.

# Conflicts:
#	.github/workflows/ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Continuous Integration
 on:
   pull_request: []
   push:
-    branches: [Develop, mainnet-release, ci-node-artifact]
+    branches: [Develop, mainnet-release]
 
 env:
   RUNNER_INSTANCE_TYPE: c5.4xlarge
@@ -102,11 +102,11 @@ jobs:
           name: code-coverage-report
           path: cobertura.xml
       - name: Zip compiled binaries
-        if: contains(github.ref, 'ci-node-artifact')
+        if: contains(github.ref, 'Develop')
         # Zipping is required since billing is based on the raw uploaded size.
         run: zip -r -j polkadex-node.zip ./target/release/polkadex-node
       - name: Upload zipped binaries as an artifact
-        if: contains(github.ref, 'ci-node-artifact')
+        if: contains(github.ref, 'Develop')
         uses: actions/upload-artifact@v3
         with:
           name: polkadex-node
