--- a/primitives/orderbook/Cargo.toml
+++ b/primitives/orderbook/Cargo.toml
@@ -23,6 +23,7 @@ anyhow = { version = "1.0.69", default-features = false }
 rust_decimal = { git = "https://github.com/Polkadex-Substrate/rust-decimal.git", branch = "master", features = ["scale-codec"], default-features = false }
 bls-primitives = {path="../bls-primitives", default-features = false}
 libp2p-core = {version ="0.34.0", optional = true}
+futures = "0.3"
 
 [dev-dependencies]
 serde_json = "1.0.94"
