--- a/pallets/thea/Cargo.toml
+++ b/pallets/thea/Cargo.toml
@@ -17,7 +17,7 @@ scale-info = { workspace = true, default-features = false, features = ["derive"]
 
 frame-support = { workspace = true, default-features = false }
 frame-system = { workspace = true, default-features = false }
-
+frame-benchmarking = { workspace = true, default-features = false }
 
 sp-core = { workspace = true, default-features = false }
 sp-std = { workspace = true, default-features = false }
@@ -28,6 +28,8 @@ thea-primitives = { path = "../../thea-primitives", default-features = false }
 thea-staking = { path = "../thea-staking", default-features = false }
 
 xcm = { workspace = true, default-features = false }
+
+pallet-balances = { default-features = false, workspace = true } # TODO: optional for PR, optional = true }
 
 [features]
 default = ["std"]
@@ -48,6 +50,8 @@ std = [
 runtime-benchmarks = [
     "frame-support/runtime-benchmarks",
     "frame-system/runtime-benchmarks",
+    "frame-benchmarking/runtime-benchmarks",
     "sp-runtime/runtime-benchmarks",
     "asset-handler/runtime-benchmarks",
+    "pallet-balances/runtime-benchmarks",
 ]
