--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,10 +75,14 @@ jobs:
           cargo fmt -- --version
           cargo clippy -V
       - name: Build Project
+#      ToDo: After fixing issue #683 replace this run with commented out one
         run: |
           cargo clean
-#          ToDo: After fixing issue #683 run node with runtime-benchmarks flag as well
           cargo build --release
+#        run: |
+#          cargo clean
+#          cargo build --release --features runtime-benchmarks
+#          RUSTFLAGS="-D warnings" cargo build
       - name: Check Formatting
         run: cargo fmt --check
 #        ToDo: Uncomment after fixing issue 684
