Created RW lock for existing fields & updated OrderbookRPC

--- a/clients/orderbook/rpc/Cargo.toml
+++ b/clients/orderbook/rpc/Cargo.toml
@@ -19,3 +19,8 @@ sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v
 sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
+memory-db = { git = "https://github.com/Polkadex-Substrate/trie.git", branch ="master"  }
+reference-trie ={ git = "https://github.com/Polkadex-Substrate/trie.git", branch ="master"  }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
+sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
+sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
