--- a/clients/orderbook/rpc/Cargo.toml
+++ b/clients/orderbook/rpc/Cargo.toml
@@ -24,3 +24,4 @@ reference-trie ={ git = "https://github.com/Polkadex-Substrate/trie.git", branch
 sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
+polkadex-primitives = { path = "../../../primitives/polkadex" }
