--- a/clients/orderbook/rpc/Cargo.toml
+++ b/clients/orderbook/rpc/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
+rust_decimal = { git = "https://github.com/Polkadex-Substrate/rust-decimal.git", branch = "master", features = ["scale-codec"] }
 futures = "0.3.21"
 jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
 log = "0.4"
@@ -25,3 +26,4 @@ sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "pol
 sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 polkadex-primitives = { path = "../../../primitives/polkadex" }
+trie-db = { git = "https://github.com/Polkadex-Substrate/trie.git", branch ="master"  }
