--- a/pallets/ocex/Cargo.toml
+++ b/pallets/ocex/Cargo.toml
@@ -24,7 +24,7 @@ rust_decimal = { workspace = true, features = ["scale-codec"], default-features 
 test-utils = { workspace = true, default-features = false, optional = true }
 pallet-timestamp = { workspace = true, default-features = false }
 frame-benchmarking = { workspace = true, default-features = false, optional = true }
-sp-core = { workspace = true, default-features = false, optional = true }
+sp-core = { workspace = true, default-features = false }
 liquidity = { path = "../liquidity", default-features = false }
 orderbook-primitives = {path="../../primitives/orderbook", default-features = false}
 bls-primitives = {path="../../primitives/bls-primitives", default-features = false}
@@ -54,6 +54,7 @@ std = [
     "rust_decimal/std",
     "pallet-timestamp/std",
     "liquidity/std",
+    "sp-core/std",
 ]
 runtime-benchmarks = [
     "sp-runtime/runtime-benchmarks",
