--- a/pallets/ocex/Cargo.toml
+++ b/pallets/ocex/Cargo.toml
@@ -31,7 +31,12 @@ bls-primitives = {path="../../primitives/bls-primitives", default-features = fal
 sp-application-crypto = { workspace = true }
 
 [dev-dependencies]
+test-utils = { workspace = true }
+pallet-assets = { workspace = true, features = ["std"] }
+pallet-balances = { workspace = true, features = ["std"] }
 sp-application-crypto = { workspace = true }
+sp-keystore = { workspace = true }
+sp-io = { workspace = true }
 
 [features]
 default = ["std"]
