--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Continuous Integration
 on:
   pull_request: []
   push:
-    branches: [Develop, main-net-runtime, redux-ci-testing, gj-ob]
+    branches: [Develop, main-net-runtime]
 
 env:
   RUNNER_INSTANCE_TYPE: c5.4xlarge
