--- a/pallets/thea-staking/Cargo.toml
+++ b/pallets/thea-staking/Cargo.toml
@@ -29,12 +29,11 @@ sp-io = { default-features = false, workspace = true }
 thea-primitives = { path = "../../thea-primitives", default-features = false }
 
 [dev-dependencies]
-sp-core = { default-features = false, workspace = true }
+sp-core = {  workspace = true }
 pallet-staking-reward-curve = { workspace = true }
-pallet-staking = { default-features = false, workspace = true }
-pallet-assets = { workspace = true, default-features = false }
-chainbridge = { path = "../chainbridge", default-features = false }
-asset-handler = { path = "../asset-handler", default-features = false }
+pallet-assets = { workspace = true }
+chainbridge = { path = "../chainbridge" }
+asset-handler = { path = "../asset-handler" }
 
 [features]
 default = ["std"]
@@ -51,6 +50,7 @@ std = [
 	"sp-io/std",
 	"thea-primitives/std",
 	"polkadex-primitives/std",
+	"pallet-staking/std"
 ]
 runtime-benchmarks = [
 	"sp-runtime/runtime-benchmarks",
