--- a/clients/orderbook/rpc/Cargo.toml
+++ b/clients/orderbook/rpc/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
 rust_decimal = { git = "https://github.com/Polkadex-Substrate/rust-decimal.git", branch = "master", features = ["scale-codec"] }
 futures = "0.3.21"
-jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
+jsonrpsee = { workspace = true, features = ["server", "macros"] }
 log = "0.4"
 parking_lot = "0.12.0"
 serde = { version = "1.0.136", features = ["derive"] }
