lots of tests fixed.

--- a/pallets/asset-handler/Cargo.toml
+++ b/pallets/asset-handler/Cargo.toml
@@ -30,8 +30,8 @@ chainbridge = { path = "../chainbridge", default-features = false }
 thea-primitives = { path = "../../thea-primitives", default-features = false }
 
 [dev-dependencies]
-pallet-assets = { workspace = true }
-pallet-balances = { workspace = true }
+pallet-assets = { workspace = true , default-features = false}
+pallet-balances = { workspace = true , default-features = false}
 
 
 [features]
@@ -47,7 +47,9 @@ std = [
 	"sp-runtime/std",
 	"chainbridge/std",
 	"xcm/std",
-	"thea-primitives/std"
+	"thea-primitives/std",
+	"pallet-assets/std",
+	"pallet-balances/std"
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
