--- a/pallets/thea/Cargo.toml
+++ b/pallets/thea/Cargo.toml
@@ -14,11 +14,8 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 parity-scale-codec = { workspace = true, default-features = false, features = ["max-encoded-len"] }
 scale-info = { workspace = true, default-features = false, features = ["derive"] }
-
 frame-support = { workspace = true, default-features = false }
 frame-system = { workspace = true, default-features = false }
-
-
 sp-core = { workspace = true, default-features = false }
 sp-std = { workspace = true, default-features = false }
 sp-runtime = { workspace = true, default-features = false }
@@ -29,9 +26,24 @@ thea-staking = { path = "../thea-staking", default-features = false }
 
 xcm = { workspace = true, default-features = false }
 
+[dev-dependencies]
+sp-keyring = { workspace = true, default-features = false }
+sp-io = { workspace = true, default-features = false }
+blst = { version = "0.3.10", default-features = false }
+pallet-balances = { workspace = true, default-features = false }
+pallet-assets = { workspace = true, default-features = false }
+pallet-staking = { workspace = true, default-features = false }
+chainbridge = {path="../chainbridge", default-features = false}
+pallet-staking-reward-curve ={ workspace = true, default-features = false }
+
 [features]
 default = ["std"]
 std = [
+    "sp-io/std",
+    "chainbridge/std",
+    "pallet-balances/std",
+    "pallet-assets/std",
+    "pallet-staking/std",
     "parity-scale-codec/std",
     "scale-info/std",
     "frame-support/std",
