--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -108,6 +108,7 @@ sc-service-test = { git = "https://github.com/paritytech/substrate", branch = "p
 default = []
 runtime-benchmarks = [
 	"node-polkadex-runtime/runtime-benchmarks",
+	"frame-benchmarking-cli/runtime-benchmarks"
 ]
 cli = [
 	"try-runtime-cli",
