--- a/primitives/orderbook/Cargo.toml
+++ b/primitives/orderbook/Cargo.toml
@@ -19,13 +19,11 @@ polkadex-primitives = { workspace = true }
 chrono = {version = "0.4.23", optional = true}
 rand = {version = "0.8.5", optional = true}
 serde = { version = "1.0.152", optional = true, default-features = false}
+serde_json = { version = "1.0.95", optional = true, default-features = false}
 anyhow = { version = "1.0.69", default-features = false }
 rust_decimal = { git = "https://github.com/Polkadex-Substrate/rust-decimal.git", branch = "master", features = ["scale-codec"], default-features = false }
 bls-primitives = {path="../bls-primitives", default-features = false}
 libp2p-core = {version ="0.34.0", optional = true}
-
-[dev-dependencies]
-serde_json = "1.0.94"
 
 [features]
 default = ["std"]
@@ -36,6 +34,7 @@ std = [
     "rand",
     "bls-primitives/std",
     "serde",
+    "serde_json",
     "anyhow/std",
     "rust_decimal/std",
     "polkadex-primitives/std",
