Unpinned toolchain version

--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,5 +1,4 @@
-# TODO [Issue #654]: unpin version when issue will be resolved.
 [toolchain]
-channel = "nightly-2023-02-21"
+channel = "nightly"
 components = [ "rustfmt", "clippy" ]
 targets = [ "wasm32-unknown-unknown" ]
