--- a/pallets/thea/Cargo.toml
+++ b/pallets/thea/Cargo.toml
@@ -23,21 +23,18 @@ asset-handler = {path = "../asset-handler", default-features = false}
 thea-primitives = { path = "../../thea-primitives", default-features = false }
 thea-staking = { path = "../thea-staking", default-features = false }
 xcm = { workspace = true, default-features = false }
-pallet-assets = { workspace = true, default-features = false, optional = true }
-pallet-staking = { default-features = false, workspace = true, optional = true }
-pallet-balances = { default-features = false, workspace = true , optional = true }
 frame-benchmarking = { workspace = true, default-features = false, optional = true }
 
 [dev-dependencies]
+pallet-staking = { workspace = true }
 pallet-staking-reward-curve = { workspace = true }
-pallet-staking = { default-features = false, workspace = true }
-pallet-assets = { workspace = true, default-features = false }
-pallet-balances = { workspace = true, default-features = false }
-chainbridge = { path = "../chainbridge", default-features = false }
-asset-handler = { path = "../asset-handler", default-features = false }
-sp-io = { workspace = true, default-features = false }
-sp-keystore = { workspace = true, default-features = false }
-sp-application-crypto = { workspace = true, default-features = false }
+pallet-assets = { workspace = true }
+pallet-balances = { workspace = true }
+chainbridge = { path = "../chainbridge" }
+asset-handler = { path = "../asset-handler" }
+sp-io = { workspace = true }
+sp-keystore = { workspace = true }
+sp-application-crypto = { workspace = true }
 blst = "0.3.10"
 
 [features]
@@ -45,8 +42,6 @@ default = ["std"]
 std = [
     "sp-io/std",
     "chainbridge/std",
-    "pallet-balances/std",
-    "pallet-assets/std",
     "pallet-staking/std",
     "parity-scale-codec/std",
     "scale-info/std",
@@ -62,10 +57,8 @@ std = [
 ]
 runtime-benchmarks = [
     "frame-benchmarking/runtime-benchmarks",
-    "pallet-balances/runtime-benchmarks",
     "asset-handler/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
-    "pallet-assets/runtime-benchmarks",
     "frame-system/runtime-benchmarks",
     "chainbridge/runtime-benchmarks",
     "sp-runtime/runtime-benchmarks",
