--- a/pallets/thea/Cargo.toml
+++ b/pallets/thea/Cargo.toml
@@ -24,6 +24,8 @@ thea-primitives = { path = "../../thea-primitives", default-features = false }
 thea-staking = { path = "../thea-staking", default-features = false }
 xcm = { workspace = true, default-features = false }
 frame-benchmarking = { workspace = true, default-features = false, optional = true }
+pallet-assets = { workspace = true, default-features = false, optional = true }
+pallet-balances = { workspace = true, default-features = false, optional = true }
 
 [dev-dependencies]
 pallet-staking = { workspace = true }
@@ -57,10 +59,12 @@ std = [
 ]
 runtime-benchmarks = [
     "frame-benchmarking/runtime-benchmarks",
+    "pallet-balances/runtime-benchmarks",
     "asset-handler/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
     "frame-system/runtime-benchmarks",
     "chainbridge/runtime-benchmarks",
     "sp-runtime/runtime-benchmarks",
+    "pallet-assets",
 ]
 try-runtime = ["frame-support/try-runtime"]
