--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ members = [
     "pallets/router",
     "pallets/liquidity",
     "pallets/thea-cross-chain-governance",
-    "misc/load-testing"
+    "misc/load-testing",
     "wallet-connector",
 ]
 
