--- a/wallet-connector/Cargo.toml
+++ b/wallet-connector/Cargo.toml
@@ -17,7 +17,7 @@ serde_json = { version="1.0.91", optional = true , default-features = false}
 hex = { version="0.4.3", optional = true, default-features = false}
 sp-std = { workspace = true, default-features = false }
 sp-core = { workspace = true, default-features = false }
-sp-runtime-interface = { workspace= true, default-features = false }
+sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37", default-features = false }
 polkadex-primitives = {workspace = true, default-features = false}
 sp-runtime = { default-features = false, workspace = true }
 frame-support = { default-features = false, workspace = true }
