--- a/pallets/thea/Cargo.toml
+++ b/pallets/thea/Cargo.toml
@@ -1,70 +1,54 @@
 [package]
-authors = ["Polkadex Authors"]
-description = "Pallet for Trustless bridging between Chains"
-edition = "2021"
-homepage = "https://polkadex.trade"
 name = "thea"
-version = "1.0.0"
+version = "0.1.0"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[package.metadata.docs.rs]
-targets = ["x86_64-unknown-linux-gnu"]
-
 [dependencies]
-parity-scale-codec = { workspace = true, default-features = false, features = ["max-encoded-len"] }
+parity-scale-codec = { workspace = true, default-features = false }
 scale-info = { workspace = true, default-features = false, features = ["derive"] }
-frame-support = { workspace = true, default-features = false }
-frame-system = { workspace = true, default-features = false }
-sp-core = { workspace = true, default-features = false }
+frame-support = { default-features = false, workspace = true }
+frame-system = { default-features = false, workspace = true }
+sp-runtime = { default-features = false, workspace = true }
 sp-std = { workspace = true, default-features = false }
-sp-runtime = { workspace = true, default-features = false }
-asset-handler = {path = "../asset-handler", default-features = false}
-thea-primitives = { path = "../../thea-primitives", default-features = false }
-thea-staking = { path = "../thea-staking", default-features = false }
-xcm = { workspace = true, default-features = false }
+polkadex-primitives = { workspace = true, default-features = false }
+rust_decimal = { workspace = true, features = ["scale-codec"], default-features = false }
+pallet-timestamp = { workspace = true, default-features = false }
 frame-benchmarking = { workspace = true, default-features = false, optional = true }
-pallet-assets = { workspace = true, default-features = false, optional = true }
-pallet-balances = { workspace = true, default-features = false, optional = true }
+sp-core = { workspace = true, default-features = false }
+bls-primitives = { path = "../../primitives/bls-primitives", default-features = false }
+thea-primitives = {path = "../../primitives/thea", default-features = false}
+
 
 [dev-dependencies]
-pallet-staking = { workspace = true }
-pallet-staking-reward-curve = { workspace = true }
-pallet-assets = { workspace = true }
-pallet-balances = { workspace = true }
-chainbridge = { path = "../chainbridge" }
-asset-handler = { path = "../asset-handler" }
-sp-io = { workspace = true }
-sp-keystore = { workspace = true }
+pallet-assets = { workspace = true, features = ["std"] }
+pallet-balances = { workspace = true, features = ["std"] }
 sp-application-crypto = { workspace = true }
-blst = "0.3.10"
+sp-keystore = { workspace = true }
+sp-io = { workspace = true }
 
 [features]
 default = ["std"]
 std = [
-    "sp-io/std",
-    "chainbridge/std",
-    "pallet-staking/std",
+    "sp-application-crypto/std",
+    "bls-primitives/std",
+    "thea-primitives/std",
     "parity-scale-codec/std",
     "scale-info/std",
     "frame-support/std",
     "frame-system/std",
-    "sp-core/std",
-    "sp-std/std",
     "sp-runtime/std",
-    "asset-handler/std",
-    "thea-primitives/std",
-    "xcm/std",
-    "thea-staking/std"
+    "sp-std/std",
+    "polkadex-primitives/std",
+    "rust_decimal/std",
+    "pallet-timestamp/std",
+    "sp-core/std",
 ]
 runtime-benchmarks = [
+    "sp-runtime/runtime-benchmarks",
     "frame-benchmarking/runtime-benchmarks",
-    "pallet-balances/runtime-benchmarks",
-    "asset-handler/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
     "frame-system/runtime-benchmarks",
-    "chainbridge/runtime-benchmarks",
-    "sp-runtime/runtime-benchmarks",
-    "pallet-assets",
 ]
 try-runtime = ["frame-support/try-runtime"]
