Thea pallet setup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ members = [
     "runtime",
     "clients/orderbook",
     "clients/orderbook/rpc",
+    "clients/thea",
+    "clients/thea/rpc",
     "pallets/pdex-migration",
     "pallets/chainbridge",
     "pallets/asset-handler",
