--- a/clients/thea/Cargo.toml
+++ b/clients/thea/Cargo.toml
@@ -14,20 +14,11 @@ thiserror = "1.0.39"
 chrono = "0.4.24"
 parking_lot = "0.12.1"
 serde = "1.0.152"
-primitive-types = { version = "0.12.1", default-features = false, features = ["scale-info"] }
 serde_json = "1.0.94"
-# Database stuff
-hash-db = { git = "https://github.com/Polkadex-Substrate/trie.git", branch = "master" }
-memory-db = { git = "https://github.com/Polkadex-Substrate/trie.git", branch = "master" }
-trie-db = { git = "https://github.com/Polkadex-Substrate/trie.git", branch = "master" }
-trie-root = { git = "https://github.com/Polkadex-Substrate/trie.git", branch = "master" }
-reference-trie = { git = "https://github.com/Polkadex-Substrate/trie.git", branch = "master" }
-reqwest = "0.11.14"
 tokio = "1.26.0"
-orderbook-primitives = { path = "../../primitives/orderbook" }
+thea-primitives = { path = "../../primitives/thea" }
 bls-primitives = { path = "../../primitives/bls-primitives" }
 polkadex-primitives = { path = "../../primitives/polkadex" }
-rust_decimal = { git = "https://github.com/Polkadex-Substrate/rust-decimal.git", branch = "master", features = ["scale-codec"] }
 prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
 parity-scale-codec = { version = "3.2.2", features = ["derive"] }
 
