--- a/clients/thea/Cargo.toml
+++ b/clients/thea/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 hash256-std-hasher = { version = "0.15.2", default-features = false }
+async-trait = "0.1.68"
 hex = "0.4.2"
 log = "0.4"
 futures = "0.3"
