--- a/primitives/thea/Cargo.toml
+++ b/primitives/thea/Cargo.toml
@@ -10,7 +10,13 @@ parity-scale-codec = { workspace = true, default-features = false }
 scale-info = { workspace = true, default-features = false, features = ["derive"] }
 sp-api  = { workspace = true, default-features = false }
 sp-application-crypto = {workspace = true, default-features = false}
+sp-io = { workspace = true, default-features = false }
+sp-core = { workspace = true, default-features = false }
+sp-std = { workspace = true, default-features = false }
 bls-primitives = {path = "../../primitives/bls-primitives", default-features = false}
+xcm = { workspace = true, default-features = false }
+sp-runtime = { workspace = true, default-features = false }
+
 [features]
 default = ["std"]
 std = [
@@ -18,5 +24,10 @@ std = [
     "scale-info/std",
     "sp-api/std",
     "sp-application-crypto/std",
-    "bls-primitives/std"
+    "bls-primitives/std",
+    "sp-io/std",
+    "sp-core/std",
+    "sp-std/std",
+    "xcm/std",
+    "sp-runtime/std"
 ]
