--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ members = [
     "pallets/support",
     "pallets/router",
     "pallets/liquidity",
+    "pallets/thea-executor",
     "misc/load-testing"
 ]
 
