--- a/pallets/asset-handler/Cargo.toml
+++ b/pallets/asset-handler/Cargo.toml
@@ -22,6 +22,7 @@ sp-io = { workspace = true, default-features = false }
 sp-core = { workspace = true, default-features = false }
 sp-std = { workspace = true, default-features = false }
 sp-runtime = { workspace = true, default-features = false }
+thea-primitives = {path = "../../primitives/thea", default-features = false}
 
 xcm = { workspace = true, default-features = false }
 
@@ -46,7 +47,8 @@ std = [
 	"chainbridge/std",
 	"xcm/std",
 	"pallet-assets/std",
-	"pallet-balances/std"
+	"pallet-balances/std",
+	"thea-primitives/std"
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
