--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ parity-scale-codec = { version = "3.1.5", default-features = false }
 rust_decimal = { git ="https://github.com/Polkadex-Substrate/rust-decimal.git", branch = "master", default-features = false }
 scale-info = { version = "2.1.2", default-features = false }
 bls-primitives = {path = "primitives/bls-primitives", default-features = false}
+thea-primitives = {path = "primitives/thea", default-features = false}
 frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
 frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
 frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
